<resources>
    <string name="app_name">Tierheim</string>

    <!-- Label for name TextView -->
    <string name="nameTextView">Tier Name</string>

    <!-- Label for breed TextView -->
    <string name="breedTextView">Rasse</string>

    <!-- Label for weight TextView -->
    <string name="weightTextView">Gewicht in kg</string>

    <!-- Label for pet Type TextView -->
    <string name="petTypeTextView">Tiertyp</string>

    <!-- Label for pet gender TextView -->
    <string name="genderTextView">Geschlecht</string>

    <!-- Title text for the empty view, which describes the empty dog house image  -->
    <string name="empty_view_title_text">Das Tierheim ist leer. \nFüge die Tiere hinzu</string>

    <!-- Title for a delete item in a menu -->
    <string name="delete_item">Tier Löschen</string>

    <!-- Title for Alert DIalog when deleting a pet -->
    <string name="alert_delete">Tier Löschen?</string>

    <!-- Title for Alert DIalog when the weight is not given -->
    <string name="missing_name">Gewicht wurde nicht eingegeben</string>

    <!-- Title for a delete item in a menu -->
    <string name="edit_pet">Tier Bearbeiten</string>

    <!-- Title for a save item in a menu -->
    <string name="save_item">Tier speichern</string>

    <!-- Title for a picture item in a menu -->
    <string name="change_picture">Bild fotografieren</string>

    <!-- Title for spinner choice dog -->
    <string name="dog_spinner">Hund</string>

    <!-- Title to choose a picture from the galery -->
    <string name="galery_picture">Bild aus der Galerie</string>

    <!-- If the weight EditText is empty -->
    <string name="empty_weight">Gewicht wurde nicht eingegeben</string>

    <!-- Title for spinner choice cat -->
    <string name="cat_spinner">Katze</string>

    <!-- Title for spinner choice dog -->
    <string name="parrot_spinner">Papagei</string>

    <!-- Title for spinner choice gender male -->
    <string name="male_spinner">Männlich</string>

    <!-- Title for spinner choice gender female -->
    <string name="female_spinner">Weiblich</string>

    <!-- Title for spinner choice unknown gender -->
    <string name="unknown_spinner">Unbekannt</string>

    <!-- Title for Worker Log iN -->
    <string name="as_worker">Mitarbeiter Bereich</string>

    <!-- Title for User Log in -->
    <string name="as_user">Benutzer Bereich</string>

    <!-- Title for Uas who you want lo log in -->
    <string name="which_area">Ich möchte zu diesen Bereich gehen </string>

</resources>
