<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">


<ImageView
    android:id="@+id/defaultPetImageView"
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/ic_pet_default" />

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".MainActivity">


    <TextView
        style="@style/TextViewEditModeStyle"
        android:id="@+id/nameTextView"
        android:layout_row="1"
        android:text="@string/nameTextView" />

    <EditText
        style="@style/EditTextEditModeStyle"
        android:id="@+id/nameEditText"
        android:layout_row="1"
        android:hint="@string/nameTextView" />

    <TextView
        style="@style/TextViewEditModeStyle"
        android:id="@+id/breedTextView"
        android:layout_row="2"
        android:text="@string/breedTextView"/>

    <EditText
        style="@style/EditTextEditModeStyle"
        android:id="@+id/breedEditText"
        android:layout_row="2"
        android:hint="@string/breedTextView" />

    <TextView
        style="@style/TextViewEditModeStyle"
        android:id="@+id/weightTextView"
        android:layout_row="3"
        android:text="@string/weightTextView"/>

    <EditText
        style="@style/EditTextEditModeStyle"
        android:id="@+id/weightEditText"
        android:hint="Measurment"
        android:layout_row="3"
        android:inputType="number" />

    <TextView
        style="@style/TextViewEditModeStyle"
        android:id="@+id/petTypeTextView"
        android:layout_row="4"
        android:text="@string/petTypeTextView"/>

    <Spinner
        style="@style/SpinnerEditModeStyle"
        android:id="@+id/petTypeSpinner"
        android:layout_row="4"/>

    <TextView
        style="@style/TextViewEditModeStyle"
        android:id="@+id/genderTextView"
        android:layout_row="5"
        android:text="@string/genderTextView" />

    <Spinner
        style="@style/SpinnerEditModeStyle"
        android:id="@+id/genderSpinner"
        android:layout_row="5"/>
</GridLayout>

    <Button
        android:id="@+id/save_pet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Save Pet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GridLayout1" />
</android.support.constraint.ConstraintLayout>