<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/plain_text"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/which_area"
        android:textSize="24dp"
        android:textStyle="italic"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/as_worker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788" />

    <Button
        android:id="@+id/as_worker"
        style="@style/MainScreenStyle"
        android:layout_marginBottom="44dp"
        android:text="@string/as_worker"
        app:layout_constraintBottom_toTopOf="@+id/as_User"
        app:layout_constraintStart_toStartOf="parent"
        tools:background="@color/colorItemSelected" />

    <Button
        android:id="@+id/as_User"
        style="@style/MainScreenStyle"
        android:layout_marginBottom="72dp"
        android:text="@string/as_user"
        app:layout_constraintBottom_toTopOf="@+id/empty_shelter_main"
        app:layout_constraintStart_toStartOf="parent"
        tools:background="@color/colorItemSelected" />

    <ImageView
        android:id="@+id/empty_shelter_main"
        style="@style/ImageAndButtonMainActivityStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_empty_shelter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>