<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/defaultPetImageView"
        style="@style/ImageAndButtonEditorModeStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_dog_default" />

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/GridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".forWorker.MainActivity">

        <TextView
            android:id="@+id/nameTextView"
            style="@style/TextViewEditModeStyle"
            android:layout_row="1"
            android:text="@string/nameTextView" />

        <TextView
            android:id="@+id/nameTextViewRight"
            android:layout_column="2"
            android:layout_row="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_gravity="fill"
            android:layout_marginTop="16dp"
            android:text="@string/nameTextView" />


        <TextView
            android:id="@+id/breedTextView"
            style="@style/TextViewEditModeStyle"
            android:layout_row="2"
            android:text="@string/breedTextView" />


        <TextView
            android:id="@+id/breedEditTextRight"
            android:layout_row="2"
            android:layout_column="2"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_gravity="fill"
            android:layout_marginTop="16dp"
            android:text="@string/breedTextView" />

        <TextView
            android:id="@+id/weightTextView"
            style="@style/TextViewEditModeStyle"
            android:layout_row="3"
            android:text="@string/weightTextView" />

        <TextView
            android:id="@+id/weightTextViewRight"
            android:layout_row="3"
            android:layout_column="2"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_gravity="fill"
            android:layout_marginTop="16dp"
            android:text="@string/breedTextView" />

        <TextView
            android:id="@+id/petTypeTextView"
            style="@style/TextViewEditModeStyle"
            android:layout_row="4"
            android:text="@string/petTypeTextView" />


        <TextView
            android:id="@+id/petTypeSTextViewRight"
            android:layout_row="4"
            android:layout_column="2"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_gravity="fill"
            android:layout_marginTop="16dp"
            android:text="@string/petTypeTextView"/>

        <TextView
            android:id="@+id/genderTextView"
            style="@style/TextViewEditModeStyle"
            android:layout_row="5"
            android:text="@string/genderTextView" />


        <TextView
            android:id="@+id/genderTextViewRight"
            android:layout_row="5"
            android:layout_column="2"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_gravity="fill"
            android:layout_marginTop="16dp"
            android:text="@string/genderTextView" />

    </GridLayout>


    <Button
        android:id="@+id/contact_petshelter_button"
        style="@style/ImageAndButtonEditorModeStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Tierheim kontaktieren"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>