<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/nameTextView"
        style="@style/TextViewEditModeStyle"
        android:text="@string/nameTextView"
        app:layout_constraintBottom_toTopOf="@id/breedTextView"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/nameEditText"
        style="@style/EditTextEditModeStyle"
        android:text="@string/nameTextView"
        app:layout_constraintBottom_toTopOf="@+id/breedEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/breedTextView"
        style="@style/TextViewEditModeStyle"
        android:layout_marginBottom="44dp"
        android:layout_marginLeft="16dp"
        android:text="@string/breedTextView"
        app:layout_constraintBottom_toTopOf="@id/weightTextView"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/breedEditText"
        style="@style/EditTextEditModeStyle"
        android:text="@string/breedTextView"
        app:layout_constraintBottom_toBottomOf="@+id/breedTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/breedTextView"
        app:layout_constraintVertical_bias="0.428"
        />

    <TextView
        android:id="@+id/weightTextView"
        style="@style/TextViewEditModeStyle"
        android:text="@string/weightTextView"
        app:layout_constraintBottom_toTopOf="@id/petTypeTextView"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/weightEditText"
        style="@style/EditTextEditModeStyle"
        android:layout_marginBottom="8dp"
        android:inputType="number"
        android:text="Weight"
        app:layout_constraintBottom_toBottomOf="@+id/weightTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weightTextView"
        app:layout_constraintVertical_bias="0.724" />

    <TextView
        android:id="@+id/petTypeTextView"
        style="@style/TextViewEditModeStyle"
        android:text="@string/petTypeTextView"
        app:layout_constraintBottom_toTopOf="@id/genderTextView"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/petTypeSpinner"
        style="@style/SpinnerEditModeStyle"
        android:layout_marginRight="168dp"
        app:layout_constraintBottom_toTopOf="@+id/genderSpinner"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightEditText"
        app:layout_constraintVertical_bias="0.515" />

    <TextView
        android:id="@+id/genderTextView"
        style="@style/TextViewEditModeStyle"
        android:text="@string/genderTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Spinner
        android:id="@+id/genderSpinner"
        style="@style/SpinnerEditModeStyle"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_pet_default" />


    <!-- Style for TextView in Editor Mode
    <style name="TextViewEditModeStyle">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:gravity">left</item>
        <item name="android:layout_marginStart">16dp</item>
        <item name="android:textAppearance">?android:textAppearanceMedium</item>
        <item name="android:fontFamily">sans-serif-light</item>
        <item name="android:layout_marginBottom">46dp</item>
    </style>


     Style for EditText in Editor Mode
    <style name="EditTextEditModeStyle">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:ems">10</item>
        <item name="android:layout_marginTop">16dp</item>
        <item name="android:layout_marginBottom">46dp</item>
        <item name="android:textAppearance">?android:textAppearanceMedium</item>
    </style>


    <style name="SpinnerEditModeStyle">
        <item name="android:ems">10</item>
        <item name="android:layout_marginRight">168dp</item>
        <item name="android:textAppearance">?android:textAppearanceMedium</item>
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
    </style>

    -->


</android.support.constraint.ConstraintLayout>